# nuitdelinfo

./: README.MD
public/: index.html
questions-api/: Cargo.toml  questions.json
questions-api/src/: main.rs
tetris/: Cargo.toml
tetris/src/: main.rs  pieces.rs  tetris.rs
website/: 404.html  Countdown.html  index.html  package-lock.json  package.json  tailwind.config.js
website/public/: 404.html
website/public/js/: tetris.js
website/src/: finalCountdown.js  main.js  questionnaire.js  scrollManager.js  tetris.js  util.js
website/style/: counter.css  style.css
