[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
actix = "0.13.1"
actix-web-actors = "4.2.0"
serde_json = "1.0.108"
rand = { version = "0.8.5", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
time = "0.3.30"
